--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "axios": "^1.3.6",
     "date-fns": "^2.29.3",
     "jsdom": "^21.1.1",
+    "serverless-http": "^3.2.0",
     "telegraf": "^4.12.2",
     "telegraf-command-parts": "^1.0.3"
   },
   "devDependencies": {
-    "dotenv": "^16.0.3"
+    "aws-sdk": "^2.1370.0",
+    "dotenv": "^16.0.3",
+    "serverless": "^3.30.1",
+    "serverless-dotenv-plugin": "^6.0.0"
   }
 }
